# hou53-bot

./: README.md  pyproject.toml
backend/: Dockerfile  feature_names.json  main.py  model.joblib  nlp_extractor.py  predictor.py  schemas.py  train.py
eda/: analysis.py
