[project]
name = "hou53-bot"
version = "0.1.0"
description = "HOU53-bot will help you find a fair price for any house based on your description! The problem is, we just have the data, but HOU53-bot has yet to learn about it."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.3",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "pydantic>=2.13.0",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
    "scikit-learn>=1.8.0",
    "shap>=0.51.0",
    "uvicorn>=0.44.0",
    "xgboost>=3.2.0",
]
